<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.research.caninerobotstudy.userinterface.MainActivity">

    <TextView
        android:id="@+id/serverIPLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_ip_label_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/serverIPTextview" />

    <TextView
        android:id="@+id/serverPortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_port_label_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/serverPortTextview" />

    <TextView
        android:id="@+id/dogNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dog_name_label_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dogNameTextview"  />

    <TextView
        android:id="@+id/ownerNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner_name_label_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ownerNameTextview"  />

    <TextView
        android:id="@+id/dogGenderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dog_gender_label_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dogGenderFemaleButton"  />

    <RadioButton
        android:id="@id/dogGenderFemaleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/dog_gender_female_button_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toRightOf="@id/dogGenderLabel"
        app:layout_constraintTop_toBottomOf="@id/dogNameTextview"
        android:onClick="onDogGenderRadioButtonClicked"/>

    <RadioButton
        android:id="@+id/dogGenderMaleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dog_gender_male_button_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toRightOf="@id/dogGenderFemaleButton"
        app:layout_constraintTop_toTopOf="@id/dogGenderFemaleButton"
        android:onClick="onDogGenderRadioButtonClicked" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_start_button_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toBottomOf="@id/dogGenderFemaleButton"
        android:onClick="connect"/>

    <EditText
        android:id="@id/serverIPTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/server_ip"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/serverIPLabel"/>

    <EditText
        android:id="@id/serverPortTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/server_port"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverIPTextview" />

    <EditText
        android:id="@id/ownerNameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/owner_name_label_hint"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverPortTextview" />

    <EditText
        android:id="@id/dogNameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dog_name_label_hint"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ownerNameTextview" />

</android.support.constraint.ConstraintLayout>
