<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.research.caninerobotstudy.userinterface.RobotActionsCollectionManager" >

    <Button
        android:id="@+id/repeatButton"
        android:onClick="onClick"
        android:text="@string/robot_actions_collection_manager_repeat"
        style="@style/buttonStyle"/>

    <Button
        android:id="@+id/skipButton"
        android:onClick="onClick"
        android:text="@string/robot_actions_collection_manager_skip"
        style="@style/buttonStyle" />

    <Button
        android:id="@+id/unexpectedButton"
        android:onClick="onClick"
        android:text="@string/robot_actions_collection_manager_unexpected"
        style="@style/buttonStyle" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/robot_actions_collection_manager_finish"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <ListView
        android:id="@+id/choice_list_view"
        style="@style/listviewStyle"  >
    </ListView>

</LinearLayout>
