<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.research.caninerobotstudy.userinterface"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    grid:alignmentMode="alignBounds"
    grid:columnCount="2"
    tools:context="com.research.caninerobotstudy.userinterface.ActivityGalleries" >

    <Button
        android:id="@+id/introductionButton"
        android:onClick="startIntroduction"
        android:text="@string/start_intro_button_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="0dp"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:enabled="true"/>

    <Button
        android:id="@+id/warmupButton"
        android:onClick="startWarmup"
        android:text="@string/start_warmup_button_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="0dp"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:enabled="true"/>

    <Button
        android:id="@+id/experimentButton"
        android:onClick="startExperiment"
        android:text="@string/start_experiment_button_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="0dp"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:enabled="true"/>

    <Button
        android:id="@+id/testSystemButton"
        android:onClick="testSystem"
        android:text="@string/start_test_system_button_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="0dp"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"
        android:enabled="true"/>

</android.support.v7.widget.GridLayout>
